	  Added support for resolving/lookup-up global parameter values
		during unroll/creation.  This patch is a quick hack, 
		but is actuallysomewhat tested with new test cases.  
	  NOTE: the lookup of out-of-scope parameters starts with the
		parent namespace of the TYPE being instantiated, 
		not the namespace in which the instance is declared.  
		Added NOTES entry about this.  


2006-05-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-03:
	  Installed scripts: haco (compile), hacunroll, haccreate, hacalloc,
		hflat (cflat), hacprsim (prsim) for user convenience.  
		Scripts' names are also transformed by configure upon
		installation.  Scripts verified runnable in installcheck-local.
	  Also: should not be reference $(DESTDIR) on installed files, 
		only staged installations.  


2006-05-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-02:
	  More portability fixes, regarding nested types, using declarations,
		unused variables, iterator traits, explicit default ctors.  


2006-05-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-01:
	  Portability touch-ups only, in util library.  


2006-05-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79:
	  Makefile.am: added more preprocessor intermediate file suffix rules.
	  Minor source touch-ups for standard conformance.  


2006-05-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-24-merged-prsim-04-12:
	  prsim improvements merged:
	  new commands:
		'breaks' list breakpoints, 'watches' list watched nodes,
		'tcounts' 'notcounts' 'zerotcounts' (new) reset tcounts
	  Implemented checkpointing with 'save' 'load' commands.  
	  Implemented expression allocation optimizations:
		-f fold-literals and -f denormalize-negations, 
		together -O1, resulting in as much as halving memory required
		by expressions and shortening expression trees for speed.  